--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain>=0.3.4",
     "langchain-community>=0.3.3",
     "langchain-ollama>=0.2.0",
+    "ell-ai>=0.0.14",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
@@ -22,3 +23,4 @@ distribution = false
 
 [tool.pdm.scripts]
 crewai_example = "python src/crewai/main.py"
+ell_example = "python src/ell/main.py"
